--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <title>
-			       Rostige Käfer & Katzen
+			       Photography
         </title>
         <meta name="description" content="Bla bla bla">
 
@@ -21,9 +21,9 @@
     </head>
     <body>
         <div class="abs">
-			<h1>Hier gehts um rostige alte Autos & Katzen</h1>
-			<p>Wir beginnen mit einer Katze.</p>
-      <p>Du musst Dir unbedingt diese <a href="http://theleech.tk">Katzenseite</a> angucken.</p>
+			<h1>A good photograph is knowing where to stand.</h1>
+			<p>We start with good walking shoes.</p>
+      <p>Take a look <a href="http://theleech.tk">Katzenseite</a> at these photographs.</p>
 		</div>
     </body>
 </html>
