--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="abs">
 			<h1>A good photograph is knowing where to stand.</h1>
 			<p>We start with good walking shoes.</p>
-      <p>Take a look <a href="http://theleech.tk">Photography</a> at these photographs.</p>
+      <p>Take a look <a href="http://theleech.tk">here</a> at these photographs.</p>
 		</div>
     </body>
 </html>
